--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/src/style.css">
     <title>EleganceStep | A 3D Shoe Shop</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div class="point point-0 visible">
+      <div class="label"></div>
+      <div class="text">Lorem ipsum, dolor sit amet consectetur … </div>
+    </div>  
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
