--- a/index.html
+++ b/index.html
@@ -8,6 +8,76 @@
     <title>EleganceStep | A 3D Shoe Shop</title>
   </head>
   <body>
-    <script type="module" src="/src/main.js"></script>
+    <div class="container">
+
+      <!-- HEADER CONTENT -->
+      <header class="header" id="header">
+        <div class="header-container">
+          <div class="header-container-logo-img">
+            <div class="header-subcontainer-logo-img">
+              <a href="#">
+                <img id="header_logo" src="/Images/allfoot_logo.svg" alt="All Foot Logo"/>
+              </a>
+            </div>
+          </div>
+          <div class="header-container-links">
+            <div class="header-container-link-shop">
+              <div style="position: relative; display: flex; justify-content: flex-start; align-items: center;">
+                <div style="position: absolute; width: 0%; border-radius: 10px; background-color: white; height: 100%;" id="backgroundLinkLoaderBar">
+                </div>
+                <div style="border: 4px solid white; border-radius: 10px; z-index: 1; height: 100%; display: flex; justify-content: center; align-items: center;">
+                  <a href="#" class="header-container-link" id="header-container-link">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-shop" viewBox="0 0 16 16">
+                      <path d="M2.97 1.35A1 1 0 0 1 3.73 1h8.54a1 1 0 0 1 .76.35l2.609 3.044A1.5 1.5 0 0 1 16 5.37v.255a2.375 2.375 0 0 1-4.25 1.458A2.37 2.37 0 0 1 9.875 8 2.37 2.37 0 0 1 8 7.083 2.37 2.37 0 0 1 6.125 8a2.37 2.37 0 0 1-1.875-.917A2.375 2.375 0 0 1 0 5.625V5.37a1.5 1.5 0 0 1 .361-.976zm1.78 4.275a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 1 0 2.75 0V5.37a.5.5 0 0 0-.12-.325L12.27 2H3.73L1.12 5.045A.5.5 0 0 0 1 5.37v.255a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0M1.5 8.5A.5.5 0 0 1 2 9v6h1v-5a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v5h6V9a.5.5 0 0 1 1 0v6h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1V9a.5.5 0 0 1 .5-.5M4 15h3v-5H4zm5-5a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1zm3 0h-2v3h2z"/>
+                    </svg>
+                    Shop
+                  </a>
+                </div>
+              </div>
+              <div style="position: relative; display: flex; justify-content: flex-start; align-items: center;">
+                <div style="position: absolute; width: 0%; border-radius: 10px; background-color: white; height: 100%;" id="backgroundLinkLoaderBar">
+                </div>
+                <div style="border: 4px solid white; border-radius: 10px; z-index: 1; height: 100%; display: flex; justify-content: center; align-items: center;">
+                  <a href="#" class="header-container-link" id="header-container-link">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-ticket-detailed" viewBox="0 0 16 16">
+                      <path d="M4 5.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5m0 5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5M5 7a1 1 0 0 0 0 2h6a1 1 0 1 0 0-2z"/>
+                      <path d="M0 4.5A1.5 1.5 0 0 1 1.5 3h13A1.5 1.5 0 0 1 16 4.5V6a.5.5 0 0 1-.5.5 1.5 1.5 0 0 0 0 3 .5.5 0 0 1 .5.5v1.5a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 11.5V10a.5.5 0 0 1 .5-.5 1.5 1.5 0 1 0 0-3A.5.5 0 0 1 0 6zM1.5 4a.5.5 0 0 0-.5.5v1.05a2.5 2.5 0 0 1 0 4.9v1.05a.5.5 0 0 0 .5.5h13a.5.5 0 0 0 .5-.5v-1.05a2.5 2.5 0 0 1 0-4.9V4.5a.5.5 0 0 0-.5-.5z"/>
+                    </svg>
+                    Discount code
+                  </a>
+                </div>
+              </div>
+              <div style="position: relative; display: flex; justify-content: flex-start; align-items: center;">
+                <div style="position: absolute; width: 0%; border-radius: 10px; background-color: white; height: 100%;" id="backgroundLinkLoaderBar">
+                </div>
+                <div style="border: 4px solid white; border-radius: 10px; z-index: 1; height: 100%; display: flex; justify-content: center; align-items: center;">
+                  <a href="#" class="header-container-link" id="header-container-link">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-headset" viewBox="0 0 16 16">
+                      <path d="M8 1a5 5 0 0 0-5 5v1h1a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V6a6 6 0 1 1 12 0v6a2.5 2.5 0 0 1-2.5 2.5H9.366a1 1 0 0 1-.866.5h-1a1 1 0 1 1 0-2h1a1 1 0 0 1 .866.5H11.5A1.5 1.5 0 0 0 13 12h-1a1 1 0 0 1-1-1V8a1 1 0 0 1 1-1h1V6a5 5 0 0 0-5-5"/>
+                    </svg>
+                    Support
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="header-container-searchBar">
+            <div class="header-container-searchBar-subcontainer">
+              <div class="header-container-searchBar-subcontainer-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" id="header-container-searchBar-subcontainer-icon" fill="white" class="bi bi-search" viewBox="0 0 16 16">
+                  <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+                </svg>
+              </div>
+              <div class="header-container-searchBar-subcontainer-textInput">
+                <input type="text" name="searchBar_value" class="searchBar-textInput" placeholder="Search products..." id="searchBar-textInput">
+              </div>
+            </div>
+          </div>
+        </div>
+      </header>
+
+    </div>
+    <!-- <script type="module" src="/src/main.js"></script> -->
+    <script type="module" src="/src/gsap-animations.js"></script>
   </body>
 </html>
