Added new sections to html

--- a/index.html
+++ b/index.html
@@ -76,6 +76,41 @@
         </div>
       </header>
 
+      <!-- BODY CONTENT -->
+      <div class="main-container">
+        <main class="main-body-container" id="main-body-container">
+          <section class="main-body-section">
+            <div class="main-body-first-section">
+              <div class="main-body-first-section-text-subcontent">
+                <div>
+                  <div style="width: 100%; display: flex; justify-content: flex-end;">
+                    <div class="topBorderTitleLine" id="topBorderTitleLine">
+                    </div>
+                  </div>
+                  <div style="display: flex; flex-wrap: nowrap;">
+                    <div style="width: fit-content; display: flex; justify-content: flex-start;">
+                      <div style="background-color: white; width: 10px; height: 0%;" id="leftBorderTitleLine">
+                      </div>
+                    </div>
+                    <div style="width: 100%;">
+                      <h1 class="main-body-first-section-title-text" id="main-body-first-section-title-text">
+                        Welcome to AllFoot
+                      </h1>
+                    </div>
+                    <div style="width: fit-content; display: flex; justify-content: flex-end; align-items: flex-end;">
+                      <div style="background-color: white; width: 10px; height: 0%;" id="rightBorderTitleLine">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="bottomBorderTitleLine" id="bottomBorderTitleLine">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+        </main>
+      </div>
+
     </div>
     <!-- <script type="module" src="/src/main.js"></script> -->
     <script type="module" src="/src/gsap-animations.js"></script>
