Implemented new title text animations

--- a/index.html
+++ b/index.html
@@ -93,9 +93,7 @@
                       </div>
                     </div>
                     <div style="width: 100%;">
-                      <h1 class="main-body-first-section-title-text" id="main-body-first-section-title-text">
-                        Welcome to AllFoot
-                      </h1>
+                      <h1 class="main-body-first-section-title-text" id="main-body-first-section-title-text">Welcome to AllFoot</h1>
                     </div>
                     <div style="width: fit-content; display: flex; justify-content: flex-end; align-items: flex-end;">
                       <div style="background-color: white; width: 10px; height: 0%;" id="rightBorderTitleLine">
