Added new carousel section & css classes

--- a/index.html
+++ b/index.html
@@ -106,6 +106,51 @@
               </div>
             </div>
           </section>
+          <section class="main-body-section" id="main-body-sections">
+            <div class="main-body-second-section">
+              <div class="wrapper">
+                <div class="button-container">
+                  <div class="buttons">
+                    <button class="carousel-btn" id="prev">
+                      <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="none" viewBox="0 0 24 24">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m15 19-7-7 7-7"/>
+                      </svg>                                        
+                    </button>
+                    <button class="carousel-btn" id="next">
+                      <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="none" viewBox="0 0 24 24">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m9 5 7 7-7 7"/>
+                      </svg>                      
+                    </button>
+                  </div>
+                </div>
+                <div class="slider slider-one">
+                  <div class="slide slide-1">
+                    <div class="slide-wrapper" style="height: 100%; width: 90%; display: flex; margin-bottom: 30px;">
+                      <div class="slide-canvas-wrapper" style="width: 100%;">
+                        <!-- <canvas id="myCanvas" style="border:1px solid grey; width: 100%; height: 100%;"></canvas> -->
+                      </div>
+                      <div class="slide-canvas-info-wrapper" style="width: 100%;">
+                        <div class="slide-canvas-info-subcontainer">
+                          <div class="slide-canvas-info-title-content">
+                            <h2>Old Oxford Shoes</h2>
+                          </div>
+                          <div class="slide-canvas-info-subcontent">
+                            <p>Descubre el clásico perfecto que combina estilo, comodidad y distinción. Fabricados con materiales premium y un diseño que nunca pasa de moda, son ideales para destacar en cualquier ocasión, desde reuniones formales hasta eventos especiales.</p>
+                          </div>
+                          <div class="slide-canvas-second-info-subcontent">
+                            <div class="slide-canvas-info-button">Ver producto</div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="slide slide-2">Slide 2</div>
+                  <div class="slide slide-3">Slide 3</div>
+                  <div class="slide slide-4">Slide 4</div>
+                </div>
+              </div>
+            </div>
+          </section>
         </main>
       </div>
 
@@ -193,5 +238,6 @@
     </div>
     <!-- <script type="module" src="/src/main.js"></script> -->
     <script type="module" src="/src/gsap-animations.js"></script>
+    <script type="module" src="/src/canvas-slide-three.js"></script>
   </body>
 </html>
