--- a/index.html
+++ b/index.html
@@ -164,6 +164,26 @@
                       </div>
                     </div>
                   </div>
+                  <div class="slide slide-3">
+                    <div class="slide-wrapper" style="height: 100%; width: 90%; display: flex; margin-bottom: 30px;">
+                      <div class="slide-canvas-wrapper" style="width: 100%;">
+                        <canvas class="canvas-model-renderer" id="canvas-model-shoe-renderer-2"></canvas>
+                      </div>
+                      <div class="slide-canvas-info-wrapper" style="width: 100%;">
+                        <div class="slide-canvas-info-subcontainer">
+                          <div class="slide-canvas-info-title-content">
+                            <h2>Adidas Football Boots</h2>
+                          </div>
+                          <div class="slide-canvas-info-subcontent">
+                            <p>Descubre el clásico perfecto que combina estilo, comodidad y distinción. Fabricados con materiales premium y un diseño que nunca pasa de moda, son ideales para destacar en cualquier ocasión, desde reuniones formales hasta eventos especiales.</p>
+                          </div>
+                          <div class="slide-canvas-second-info-subcontent">
+                            <div class="slide-canvas-info-button">Ver producto</div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
