Changed description for shoes & added text-shadow to it

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                             <h2>Nike Air Jordan</h2>
                           </div>
                           <div class="slide-canvas-info-subcontent">
-                            <p>Descubre el clásico perfecto que combina estilo, comodidad y distinción. Fabricados con materiales premium y un diseño que nunca pasa de moda, son ideales para destacar en cualquier ocasión, desde reuniones formales hasta eventos especiales.</p>
+                            <p>Descubre el icónico estilo y rendimiento de los Nike Air Jordan, diseñados para marcar la diferencia dentro y fuera de la cancha. Confeccionados con materiales de primera calidad, estos tenis ofrecen comodidad superior y soporte excepcional gracias a su tecnología de amortiguación Air. Su diseño atemporal, combinado con detalles que rinden homenaje a la leyenda del baloncesto, los convierte en un imprescindible para los amantes del deporte y la moda urbana.</p>
                           </div>
                           <div class="slide-canvas-second-info-subcontent">
                             <div class="slide-canvas-info-button">Ver producto</div>
@@ -175,7 +175,7 @@
                             <h2>Adidas Football Boots</h2>
                           </div>
                           <div class="slide-canvas-info-subcontent">
-                            <p>Descubre el clásico perfecto que combina estilo, comodidad y distinción. Fabricados con materiales premium y un diseño que nunca pasa de moda, son ideales para destacar en cualquier ocasión, desde reuniones formales hasta eventos especiales.</p>
+                            <p>Domina el terreno de juego con las Adidas Football Boots, diseñadas para ofrecer tracción superior, control preciso del balón y máxima velocidad. Su suela especializada se adapta a diferentes superficies, mientras que la parte superior flexible y transpirable asegura un ajuste cómodo. Ya seas un profesional o un aficionado, estas botas te llevarán al siguiente nivel, permitiéndote rendir al máximo en cada partido.</p>
                           </div>
                           <div class="slide-canvas-second-info-subcontent">
                             <div class="slide-canvas-info-button">Ver producto</div>
@@ -195,7 +195,7 @@
                             <h2>Espirit Heels</h2>
                           </div>
                           <div class="slide-canvas-info-subcontent">
-                            <p>Descubre el clásico perfecto que combina estilo, comodidad y distinción. Fabricados con materiales premium y un diseño que nunca pasa de moda, son ideales para destacar en cualquier ocasión, desde reuniones formales hasta eventos especiales.</p>
+                            <p>Elegancia y comodidad se combinan en los Espirit Heels, ideales para cualquier ocasión. Con un diseño sofisticado y versátil, estos tacones destacan por su fabricación en materiales suaves y resistentes que garantizan confort durante todo el día. Perfectos para eventos formales o salidas casuales, los Espirit Heels son el toque final perfecto para tu outfit.</p>
                           </div>
                           <div class="slide-canvas-second-info-subcontent">
                             <div class="slide-canvas-info-button">Ver producto</div>
