Added carousel title

--- a/index.html
+++ b/index.html
@@ -111,16 +111,21 @@
               <div class="wrapper">
                 <div class="button-container">
                   <div class="buttons">
-                    <button class="carousel-btn" id="prev">
-                      <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="none" viewBox="0 0 24 24">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m15 19-7-7 7-7"/>
-                      </svg>                                        
-                    </button>
-                    <button class="carousel-btn" id="next">
-                      <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="none" viewBox="0 0 24 24">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m9 5 7 7-7 7"/>
-                      </svg>                      
-                    </button>
+                    <div class="tendency-title">
+                      <h2>Lo último en tendencia</h2>
+                    </div>
+                    <div class="carousel-btns">
+                      <button class="carousel-btn" id="prev">
+                        <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="none" viewBox="0 0 24 24">
+                          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m15 19-7-7 7-7"/>
+                        </svg>                                        
+                      </button>
+                      <button class="carousel-btn" id="next">
+                        <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="none" viewBox="0 0 24 24">
+                          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m9 5 7 7-7 7"/>
+                        </svg>                      
+                      </button>
+                    </div>
                   </div>
                 </div>
                 <div class="slider slider-one">
