--- a/index.html
+++ b/index.html
@@ -224,12 +224,12 @@
                       <h2>Consigue nuestros iconos</h2>
                     </div>
                     <div class="carousel-btns">
-                      <button class="carousel-btn" id="prev">
+                      <button class="carousel-btn" id="prev-icon">
                         <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="none" viewBox="0 0 24 24">
                           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m15 19-7-7 7-7"/>
                         </svg>                                        
                       </button>
-                      <button class="carousel-btn" id="next">
+                      <button class="carousel-btn" id="next-icon">
                         <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="none" viewBox="0 0 24 24">
                           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m9 5 7 7-7 7"/>
                         </svg>                      
@@ -257,7 +257,7 @@
                           <!-- <img style="position: absolute; width: 100%; height: 100%;" src="https://img01.ztat.net/article/spp-media-p1/7c4bfa7498bf3e7290036d53940f2eea/6b6755d0e6b846eb948883505311ca74.jpg?imwidth=762" alt="adidas flip flops"> -->
                           <div style="position: relative; color: white; padding: 20px;">
                             <div style="background-color: rgb(150, 150, 150);; border: 1px solid rgb(150, 150, 150); padding: 10px 20px; border-radius: 30px; cursor: pointer;">
-                              Adidas Flip Flops
+                              Crocs Slippers
                             </div>
                           </div>
                         </div>
