Added Nike Slippers to project

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                           <!-- <img style="position: absolute; width: 100%; height: 100%;" src="https://img01.ztat.net/article/spp-media-p1/7c4bfa7498bf3e7290036d53940f2eea/6b6755d0e6b846eb948883505311ca74.jpg?imwidth=762" alt="adidas flip flops"> -->
                           <div style="position: relative; color: white; padding: 20px;">
                             <div style="background-color: rgb(150, 150, 150);; border: 1px solid rgb(150, 150, 150); padding: 10px 20px; border-radius: 30px; cursor: pointer;">
-                              Crocs Slippers
+                              Nike Slippers
                             </div>
                           </div>
                         </div>
