Added kubota flip flops to project

--- a/index.html
+++ b/index.html
@@ -295,6 +295,34 @@
                     </div>
                   </div>
 
+                  <div class="slide slide-3" style="background-color: #1d1d1d;">
+                    <div class="slide-wrapper" style="height: 100%; width: 90%; display: flex;">
+                      <div class="slide-canvas-wrapper" style="width: 100%; display: flex; padding: 60px 0px; column-gap: 45px;">
+
+                        <div style="position: relative; width: 100%; height: 100%; display: flex; align-items: flex-end;">
+                          <canvas style="width: 100%; height: 100%;" class="canvas-model-icon-renderer" id="canvas-model-icon-renderer-4"></canvas>  
+                          <!-- <img style="position: absolute; width: 100%; height: 100%;" src="https://img01.ztat.net/article/spp-media-p1/7c4bfa7498bf3e7290036d53940f2eea/6b6755d0e6b846eb948883505311ca74.jpg?imwidth=762" alt="adidas flip flops"> -->
+                          <div style="position: relative; color: white; padding: 20px;">
+                            <div style="background-color: rgb(150, 150, 150);; border: 1px solid rgb(150, 150, 150); padding: 10px 20px; border-radius: 30px; cursor: pointer;">
+                              Nike Flip Flops
+                            </div>
+                          </div>
+                        </div>
+
+                        <div style="position: relative; width: 100%; height: 100%; display: flex; align-items: flex-end;">
+                          <canvas style="width: 100%; height: 100%;" class="canvas-model-icon-renderer" id="canvas-model-icon-renderer-5"></canvas>  
+                          <!-- <img style="position: absolute; width: 100%; height: 100%;" src="https://img01.ztat.net/article/spp-media-p1/7c4bfa7498bf3e7290036d53940f2eea/6b6755d0e6b846eb948883505311ca74.jpg?imwidth=762" alt="adidas flip flops"> -->
+                          <div style="position: relative; color: white; padding: 20px;">
+                            <div style="background-color: rgb(150, 150, 150);; border: 1px solid rgb(150, 150, 150); padding: 10px 20px; border-radius: 30px; cursor: pointer;">
+                              Kubota Flip Flops
+                            </div>
+                          </div>
+                        </div>
+
+                      </div>
+                    </div>
+                  </div>
+
                 </div>
               </div>
             </div>
