Added animations, tags & styles for iconic shoes slider

--- a/index.html
+++ b/index.html
@@ -237,27 +237,25 @@
                     </div>
                   </div>
                 </div>
-                <div class="slider slider-one">
+                <div class="slider-iconic slider-one">
 
-                  <div class="slide slide-1" style="background-color: #1d1d1d;">
-                    <div class="slide-wrapper" style="height: 100%; width: 90%; display: flex;">
-                      <div class="slide-canvas-wrapper" style="width: 100%; display: flex; padding: 60px 0px; column-gap: 45px;">
+                  <div class="slide-iconic">
+                    <div class="slide-wrapper">
+                      <div class="slide-canvas-wrapper">
 
-                        <div style="position: relative; width: 100%; height: 100%; display: flex; align-items: flex-end;">
+                        <div class="canvas-container">
                           <canvas style="width: 100%; height: 100%;" class="canvas-model-icon-renderer" id="canvas-model-icon-renderer-0"></canvas>  
-                          <!-- <img style="position: absolute; width: 100%; height: 100%;" src="https://img01.ztat.net/article/spp-media-p1/7c4bfa7498bf3e7290036d53940f2eea/6b6755d0e6b846eb948883505311ca74.jpg?imwidth=762" alt="adidas flip flops"> -->
-                          <div style="position: relative; color: white; padding: 20px;">
-                            <div style="background-color: rgb(150, 150, 150);; border: 1px solid rgb(150, 150, 150); padding: 10px 20px; border-radius: 30px; cursor: pointer;">
+                          <div class="canvas-button-container">
+                            <div class="canvas-button">
                               Adidas Flip Flops
                             </div>
                           </div>
                         </div>
 
-                        <div style="position: relative; width: 100%; height: 100%; display: flex; align-items: flex-end;">
+                        <div class="canvas-container">
                           <canvas style="width: 100%; height: 100%;" class="canvas-model-icon-renderer" id="canvas-model-icon-renderer-1"></canvas>  
-                          <!-- <img style="position: absolute; width: 100%; height: 100%;" src="https://img01.ztat.net/article/spp-media-p1/7c4bfa7498bf3e7290036d53940f2eea/6b6755d0e6b846eb948883505311ca74.jpg?imwidth=762" alt="adidas flip flops"> -->
-                          <div style="position: relative; color: white; padding: 20px;">
-                            <div style="background-color: rgb(150, 150, 150);; border: 1px solid rgb(150, 150, 150); padding: 10px 20px; border-radius: 30px; cursor: pointer;">
+                          <div class="canvas-button-container">
+                            <div class="canvas-button">
                               Crocs Slippers
                             </div>
                           </div>
@@ -267,25 +265,23 @@
                     </div>
                   </div>
 
-                  <div class="slide slide-2" style="background-color: #1d1d1d;">
-                    <div class="slide-wrapper" style="height: 100%; width: 90%; display: flex;">
-                      <div class="slide-canvas-wrapper" style="width: 100%; display: flex; padding: 60px 0px; column-gap: 45px;">
+                  <div class="slide-iconic">
+                    <div class="slide-wrapper">
+                      <div class="slide-canvas-wrapper">
 
-                        <div style="position: relative; width: 100%; height: 100%; display: flex; align-items: flex-end;">
+                        <div class="canvas-container">
                           <canvas style="width: 100%; height: 100%;" class="canvas-model-icon-renderer" id="canvas-model-icon-renderer-2"></canvas>  
-                          <!-- <img style="position: absolute; width: 100%; height: 100%;" src="https://img01.ztat.net/article/spp-media-p1/7c4bfa7498bf3e7290036d53940f2eea/6b6755d0e6b846eb948883505311ca74.jpg?imwidth=762" alt="adidas flip flops"> -->
-                          <div style="position: relative; color: white; padding: 20px;">
-                            <div style="background-color: rgb(150, 150, 150);; border: 1px solid rgb(150, 150, 150); padding: 10px 20px; border-radius: 30px; cursor: pointer;">
+                          <div class="canvas-button-container">
+                            <div class="canvas-button">
                               Puma Flops
                             </div>
                           </div>
                         </div>
 
-                        <div style="position: relative; width: 100%; height: 100%; display: flex; align-items: flex-end;">
+                        <div class="canvas-container">
                           <canvas style="width: 100%; height: 100%;" class="canvas-model-icon-renderer" id="canvas-model-icon-renderer-3"></canvas>  
-                          <!-- <img style="position: absolute; width: 100%; height: 100%;" src="https://img01.ztat.net/article/spp-media-p1/7c4bfa7498bf3e7290036d53940f2eea/6b6755d0e6b846eb948883505311ca74.jpg?imwidth=762" alt="adidas flip flops"> -->
-                          <div style="position: relative; color: white; padding: 20px;">
-                            <div style="background-color: rgb(150, 150, 150);; border: 1px solid rgb(150, 150, 150); padding: 10px 20px; border-radius: 30px; cursor: pointer;">
+                          <div class="canvas-button-container">
+                            <div class="canvas-button">
                               Nike Slippers
                             </div>
                           </div>
@@ -295,25 +291,23 @@
                     </div>
                   </div>
 
-                  <div class="slide slide-3" style="background-color: #1d1d1d;">
-                    <div class="slide-wrapper" style="height: 100%; width: 90%; display: flex;">
-                      <div class="slide-canvas-wrapper" style="width: 100%; display: flex; padding: 60px 0px; column-gap: 45px;">
+                  <div class="slide-iconic">
+                    <div class="slide-wrapper">
+                      <div class="slide-canvas-wrapper">
 
-                        <div style="position: relative; width: 100%; height: 100%; display: flex; align-items: flex-end;">
+                        <div class="canvas-container">
                           <canvas style="width: 100%; height: 100%;" class="canvas-model-icon-renderer" id="canvas-model-icon-renderer-4"></canvas>  
-                          <!-- <img style="position: absolute; width: 100%; height: 100%;" src="https://img01.ztat.net/article/spp-media-p1/7c4bfa7498bf3e7290036d53940f2eea/6b6755d0e6b846eb948883505311ca74.jpg?imwidth=762" alt="adidas flip flops"> -->
-                          <div style="position: relative; color: white; padding: 20px;">
-                            <div style="background-color: rgb(150, 150, 150);; border: 1px solid rgb(150, 150, 150); padding: 10px 20px; border-radius: 30px; cursor: pointer;">
+                          <div class="canvas-button-container">
+                            <div class="canvas-button">
                               Nike Flip Flops
                             </div>
                           </div>
                         </div>
 
-                        <div style="position: relative; width: 100%; height: 100%; display: flex; align-items: flex-end;">
+                        <div class="canvas-container">
                           <canvas style="width: 100%; height: 100%;" class="canvas-model-icon-renderer" id="canvas-model-icon-renderer-5"></canvas>  
-                          <!-- <img style="position: absolute; width: 100%; height: 100%;" src="https://img01.ztat.net/article/spp-media-p1/7c4bfa7498bf3e7290036d53940f2eea/6b6755d0e6b846eb948883505311ca74.jpg?imwidth=762" alt="adidas flip flops"> -->
-                          <div style="position: relative; color: white; padding: 20px;">
-                            <div style="background-color: rgb(150, 150, 150);; border: 1px solid rgb(150, 150, 150); padding: 10px 20px; border-radius: 30px; cursor: pointer;">
+                          <div class="canvas-button-container">
+                            <div class="canvas-button">
                               Kubota Flip Flops
                             </div>
                           </div>
