Added new section block & js module

--- a/index.html
+++ b/index.html
@@ -322,6 +322,28 @@
             </div>
           </section>
 
+          <section class="main-body-section" id="main-body-sections">
+            <div class="main-body-second-section">
+              <div class="wrapper">
+                <div class="button-container">
+                  <div class="buttons">
+                    <div class="tendency-title">
+                      <h2>Nuestras colecciones</h2>
+                    </div>
+                  </div>
+                </div>
+                <div class="slider slider-one" id="expositor">
+                  <div class="slide slide-1" style="background-color: floralwhite;">
+                    <div class="slide-wrapper" style="height: 100%; width: 90%; display: flex; margin-bottom: 30px;">
+                      <div class="slide-canvas-wrapper" style="width: 100%;">
+                        <canvas class="canvas-model-renderer" id="canvas-model-shoe-expositor-renderer"></canvas>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
 
         </main>
       </div>
@@ -408,8 +430,8 @@
       </footer>
 
     </div>
-    <!-- <script type="module" src="/src/main.js"></script> -->
+    <script type="module" src="/src/main.js"></script>
     <script type="module" src="/src/gsap-animations.js"></script>
-    <script type="module" src="/src/canvas-slide-three.js"></script>
+    <!-- <script type="module" src="/src/canvas-slide-three.js"></script> -->
   </body>
 </html>
