Added text color attribute to style

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                         </div>
                         <canvas class="canvas-model-renderer" id="canvas-model-shoe-expositor-renderer"></canvas>
                       </div>
-                      <div class="slide-canvas-info-wrapper" style="width: 100%; display: none;" id="canvas-model-shoe-expositor-renderer-info">
+                      <div class="slide-canvas-info-wrapper" style="width: 100%; display: none; color: black;" id="canvas-model-shoe-expositor-renderer-info">
                       </div>
                     </div>
                   </div>
